Soft body (point cache) bake cannot be aborted using the "X" button #56811

Closed
opened 2018-09-15 10:45:05 +02:00 by Nicola De Mitri · 5 comments

System Information
Ubuntu 18.04, Intel i5 CPU, no GPU.

Blender Version
Broken: 2.79b

Short description of error
Baking a soft body simulation causes the GUI to display a status bar labelled Point Cache with an abort ("X") button. However, it also makes the entire GUI unresponsive, therefore that button can't ever be clicked. If the unresponsive interface is the expected behavior, then the "X" button shouldn't appear in the first place, as it is misleading.

Hitting "Esc" on the keyboard seems to work, even if sometimes it appears to take multiple attempts.

Exact steps for others to reproduce the error

  • Open Blender
  • Subdivide the default cube 10 times or more
  • Enable "soft body" from the Physics tab
  • Hit "Bake" from the "Soft body cache" panel
  • Try to abort using the "X" button
**System Information** Ubuntu 18.04, Intel i5 CPU, no GPU. **Blender Version** Broken: 2.79b **Short description of error** Baking a soft body simulation causes the GUI to display a status bar labelled *Point Cache* with an abort ("X") button. However, it also makes the entire GUI unresponsive, therefore that button can't ever be clicked. If the unresponsive interface is the expected behavior, then the "X" button shouldn't appear in the first place, as it is misleading. Hitting "Esc" on the keyboard seems to work, even if sometimes it appears to take multiple attempts. **Exact steps for others to reproduce the error** - Open Blender - Subdivide the default cube 10 times or more - Enable "soft body" from the Physics tab - Hit "Bake" from the "Soft body cache" panel - Try to abort using the "X" button

Added subscriber: @NicolaSap

Added subscriber: @NicolaSap
Nicola De Mitri changed title from Soft body (point cache) bake cannot be aborted to Soft body (point cache) bake cannot be aborted using the "X" button 2018-09-15 10:50:12 +02:00

This issue was referenced by 640fcc25a4

This issue was referenced by 640fcc25a4a227c816cf4523e467f03cbafab9e9

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-09-17 10:22:35 +02:00

Will just remove that button when UI is locked...

Will just remove that button when UI is locked...

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56811
No description provided.