Fix T56811: Do not show cancel button for jobs when UI is locked.

Since that button is then totally useless and unusable...